--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <header class="cabeçalho">
         <div class="container">
-            <input type="checkbox" id="menu" class="container__botao" />
-            <label for="menu">
+          <input type="checkbox" id="menu" class="container__botao" />
+          <label for="menu">
             <span class="cabeçalho__menu-hamburguer container__imagem"></span>
-        </label>
-        <ul class="lista-menu">
+          </label>
+          <ul class="lista-menu">
             <li class="lista-menu__titulo">Categorias</li>
             <li class="lista-menu__item">
               <a href="#" class="lista-menu__link">Programação</a>
@@ -33,13 +33,13 @@
             <li class="lista-menu__item">
               <a href="#" class="lista-menu__link">Design & UX</a>
             </li>
-          </ul>
-            <img src="img/Logo.svg" alt="Logo da AluraBooks class=container__imagem">
+          </ul>          
+            <img src="./Logo.svg" alt="Logo da AluraBooks class=container__imagem">
         </div>
         <div class="container">
-            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos class= container__imagem"></a>
-            <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras class="container__imagem></a>
-            <a href="#"><img src="img/Usuário.svg" alt="Meu perfil class="container__imagem></a>
+            <a href="#"><img src="./Favoritos.svg" alt="Meus favoritos class="container__imagem></a>
+            <a href="#"><img src="./Compras.svg" alt="Carrinho de compras class="container__imagem></a>
+            <a href="#"><img src="./Usuário.svg" alt="Meu perfil class="container__imagem></a>
         </div>
     </header>
 </body>
